# jwt-bearer-generator-salo

./: README.md  pyproject.toml
src/jwt_bearer_generator_salo/: __init__.py  cli.py  generate_bearer.py
